--- a/templates/admin.html
+++ b/templates/admin.html
@@ -24,9 +24,9 @@
 	</form>
 </div>
 <div class="row">
-	<div class="col-xs-2">
-		<h5>Mina artiklar<h5>
-		<div class="row">
+	{% if userLevel == "Premium" %}
+		<div class="col-xs-12">
+			<h5>Mina artiklar<h5>
 			<ul class="list-group">
 			{% for row in viewArticleUses if row.user ==  sessionUserID %}
  				<li class="list-group-item">
@@ -36,5 +36,5 @@
 			{% endfor %}
 			</ul>
 		</div>
-	</div>
+	{% endif %}
 </div>
