--- a/templates/connectedContents.html
+++ b/templates/connectedContents.html
@@ -8,6 +8,11 @@
 <h5>Content connected to this goal:</h5>
 <ul>
 	{% for contentrow in connectedContent %}
-		<li>{{contentrow.title|e}} - {{contentrow.estimate|e}} h</li>
+		<li>
+			<form method="post" action="">
+				{{contentrow.title|e}} - {{contentrow.estimate|e}} h 
+				<button class="transparentbtn" type="submit" name="deleteConnectionID" value="{{contentrow.id}}"><span class="glyphicon glyphicon-check" aria-hidden="true"></span> Done</button>
+			</form>
+		</li>
 	{% endfor %}
 </ul>
